fix: frontend: let page background color always be white, even in dark mode

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -10,9 +10,3 @@ body {
     max-width: 600px;
     overflow: hidden;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
